# jsondict

./: README.md  pyproject.toml
jsonicdict/: __init__.py  __int__.py
